统一cardsearcher设置触摸监听，切换禁卡表时通知deckmanagerfragment和cardsearchfragment刷新禁限显示